[gd_scene load_steps=9 format=3 uid="uid://b7cxcxw0418a2"]

[ext_resource type="Script" path="res://scripts/healthbar.gd" id="1_46df3"]
[ext_resource type="Texture2D" uid="uid://dg3ddw2jsw63b" path="res://sprites/UI/battle/healthbar.png" id="1_fm0m1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ao7rn"]
atlas = ExtResource("1_fm0m1")
region = Rect2(93, 165, 404, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ma0m0"]
atlas = ExtResource("1_fm0m1")
region = Rect2(93, 17, 404, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxo17"]
atlas = ExtResource("1_fm0m1")
region = Rect2(99, 98, 392, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_78cvk"]
atlas = ExtResource("1_fm0m1")
region = Rect2(527, 165, 404, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ih8om"]
atlas = ExtResource("1_fm0m1")
region = Rect2(527, 17, 404, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtbw8"]
atlas = ExtResource("1_fm0m1")
region = Rect2(533, 98, 392, 50)

[node name="Healthbar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_46df3")
value = 60.0

[node name="CompanionSkin" type="TextureProgressBar" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
value = 60.0
texture_under = SubResource("AtlasTexture_ao7rn")
texture_over = SubResource("AtlasTexture_ma0m0")
texture_progress = SubResource("AtlasTexture_yxo17")
texture_progress_offset = Vector2(6, 8)

[node name="EnemySkin" type="TextureProgressBar" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
value = 60.0
texture_under = SubResource("AtlasTexture_78cvk")
texture_over = SubResource("AtlasTexture_ih8om")
texture_progress = SubResource("AtlasTexture_gtbw8")
texture_progress_offset = Vector2(6, 8)
