[gd_scene load_steps=3 format=3 uid="uid://dx730pysxuwix"]

[ext_resource type="Script" path="res://logic/CharacterPresenter.cs" id="1_47bmx"]
[ext_resource type="Script" path="res://scripts/healthbar.gd" id="2_mxapx"]

[node name="Character" type="Node2D"]
script = ExtResource("1_47bmx")

[node name="Healthbar" type="Node" parent="."]
script = ExtResource("2_mxapx")

[connection signal="HealthChanged" from="." to="Healthbar" method="_on_health_changed"]
